--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,8 +8,7 @@
 			<h1 class="text-center mb-3">
 			<i class="fas fa-user-plus"></i> Register
 			</h1>
-			<!-- Temporarly remove include partials -->
-			
+			<% include ./partials/messages %>
 			<form action="/users/register" method="POST">
 			<div class="form-group">
 				<label for="name">Name</label>
