--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -43,3 +43,17 @@
 		</button>
 	</div>
 <% } %>
+
+<!-- Check for login errors -->
+<% if(error != '') { %>
+	<!-- Send error message -->
+	<!-- Use Bootstrap dismissible alerts -->
+	<!-- https://getbootstrap.com/docs/4.5/components/alerts/#dismissing -->
+	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+		<!-- Output the error message -->
+		<%= error %>
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		</button>
+	</div>
+<% } %>
