--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,4 @@
 <h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
+<p class="lead mb-3">Welcome <%= name %></p>
 <!-- When the user is logged in, we will have access to the user object. -->
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
